# Obs2Org

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  Pipfile  README.md  make_package.bat  make_package.sh  obs2org.code-workspace  pyproject.toml  run_local_linters.bat  run_local_linters.sh  run_tests.bat  run_tests.sh  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bandit.yml  black.yml  create_pip.yml  flake8.yml  linux.yml  linux_test.yml  osx.yml  osx_test.yml  pycodestyle.yml  pydocstyle.yml  pyflakes.yml  windows.yml  windows_test.yml
PYTHON_TEMPLATE/: __init__.py
PYTHON_TEMPLATE/doc/: Makefile  make.bat
PYTHON_TEMPLATE/doc/source/: conf.py  index.rst  license.rst
obs2org/: __init__.py  __main__.py  convert.py  main.py  parse_org_mode.py
obs2org/doc/source/: conf.py  contributing.rst  genindex.rst  index.rst  license.rst  license.rst~  py-modindex.rst  usage.rst
scripts/: get_changelog.sh
tests/: __init__.py  test_main.py
tests/fixtures/: Test 3.md  Test 3_orig.org  Test 3_orig_no_cite.org  test1.md  test1_fails.org  test1_orig.org  test2.md  test2_fails.org  test2_orig.org
tests/fixtures/dir/: test1.md
tests/fixtures/dir1/: Test 3.md
