[metadata]
name = PYTHON_TEMPLATE
version = attr: PYTHON_TEMPLATE.VERSION
author = Release-Candidate
author_email = rec@gmx.at
description =
keywords =
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/Release-Candidate/PYTHON_TEMPLATE
project_urls =
    Bug Tracker = https://github.com/Release-Candidate/PYTHON_TEMPLATE/issues
    Documentation = https://PYTHON_TEMPLATE.readthedocs.io/en/latest/
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: POSIX
    Operating System :: POSIX :: BSD
    Operating System :: Unix
    Operating System :: OS Independent
    Environment :: Console
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules
    Intended Audience :: End Users/Desktop

[options]
packages = PYTHON_TEMPLATE
python_requires = >=3.9
include_package_data = True

[pylama]
linters = mccabe,pydocstyle,pycodestyle,pyflakes,isort
ignore = D104,D213,D413,D401,D203,D204,D205,D215,D400,D404,D406,D407,D408,D409,D415

[pylama:pycodestyle]
max_line_length = 200

[pylama:pylint]
max_line_length = 200

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88

[flake8]
ignore = E501,W503

[pydocstyle]
ignore = D104,D213,D413,D401,D203,D204,D205,D215,D400,D404,D406,D407,D408,D409,D415

[pycodestyle]
ignore = W503,E501
